--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div>
         <h1>Kylan Childers</h1>
     </div>
+    <div>
     <nav>
         <ul>
             <li><a href="index.html">About</a></li>
@@ -16,6 +17,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    </div>
     <div>
         <h1>About Me</h1>
     </div>
