--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    <div>
+    <div class="header">
+    <div class="nav">
         <h1>Kylan Childers</h1>
-    </div>
-    <div>
-    <nav>
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>
     </div>
+    </div>
+    <section class="about">
     <div>
-        <h1>About Me</h1>
+        <h2>About Me</h2>
     </div>
+    <hr>
     <div>
         <p>
             I was born and raised in Skagit County, WA and attended Burlington-Edison High School before attending ITT Technical Institude in Everett for my Associates Degree in Computer Networking. Upon graduation, I moved to Bellingham, WA.
@@ -32,5 +32,6 @@
             I currently live off the southwestern shore of Lake Whatcom with my girlfriend, Zahra, and our two dogs, Loki and Simon, and our Cat, Woody. I enjoy camping, hiking, and snowboarding with the occasional game of golf. Musicwise, I'm generally a rock and metal guy, and I play guitar. I'm also a huge movie buff and have seen probably thousands of movies. I'll also be able to quote any of them to you.
         </p>
     </div>
+    </section>
 </body>
 </html>
