--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 After graduating, I bounced around a couple short term website technical support jobs before settling it at Hemisphere Solutions, a startup managed IT service provider where I work as the Senior Network Administrator. As the first employee, I've helped grow the company by nearly 800 client users. We specialize in Microsoft's Office 365 and Azure services.
             </p>
             <p>
-                I currently live off the southwestern shore of Lake Whatcom with my girlfriend, Zahra, and our two dogs, Loki and Simon, and our Cat, Woody. I enjoy camping, hiking, and snowboarding with the occasional game of golf. Musicwise, I'm generally a rock and metal guy, and I play guitar. I'm also a huge movie buff and have seen probably thousands of movies. I'll also be able to quote any of them to you.
+                I currently live off the southwestern shore of Lake Whatcom with my girlfriend, Zahra, and our two dogs, Loki and Simon, and our Cat, Woody. I enjoy camping, hiking, and snowboarding with the occasional game of golf. Musicwise, I'm generally a rock and metal guy, and I play guitar. I'm a die hard Seahawks fan. I'm also a huge movie buff and have seen probably thousands of movies. I'll also be able to quote any of them to you.
             </p>
         </div>
     </section>
