changed input field to text area for message section on contact form

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <form>
         Name: <input type="text" name="Name" value="John Smith"><br>
         Email: <input type="email" name="Email" value="example@gmail.com"><br>
-        Message: <input type="message" rows="10" columns="30" name="Message"><br>
+        Message: <textarea type="message" rows="10" columns="30" name="Message"></textarea><br>
         <input type="submit" value="Submit">
     </form>
 
