--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
     </div>
     <hr>
     <form>
-        Name: <input type="text" name="Name" value="John Smith"><br>
-        Email: <input type="email" name="Email" value="example@gmail.com"><br>
-        Message: <textarea type="message" rows="10" columns="30" name="Message"></textarea><br>
+        Name<br><input type="text" name="Name" value="John Smith"><br>
+        Email<br><input type="email" name="Email" value="example@gmail.com"><br>
+        Message<br><textarea type="message" rows="10" columns="30" name="Message"></textarea><br>
         <input type="submit" value="Submit">
     </form>
 
