Add sticky footer to all pages

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+    <div class="wrapper">
     <div class="header">
         <div class="nav">
             <h1>Kylan Childers</h1>
@@ -27,8 +28,9 @@
         Message<br><textarea class="contactInfo" type="message" rows="10" columns="30" name="Message"></textarea><br>
         <input type="submit" value="Submit">
     </form>
-
 </section>
+    <div class="push"></div>
+    </div>
 <footer>       
     <p class="copyright">
         Copyright©
