--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+    <div class="wrapper">
     <div class="header">
         <div class="nav">
             <h1>Kylan Childers</h1>
@@ -34,6 +35,8 @@
             </p>
         </div>
     </section>
+    <div class="push"></div>
+    </div>
     <footer>       
         <p class="copyright">
             Copyright©
