--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,29 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-    <div>
-        <h1>Kylan Childers</h1>
+    <div class="wrapper">
+    <div class="header">
+        <div class="nav">
+            <h1>Kylan Childers</h1>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+        </div>
+     </div>
+     <section class="portfolioList">
+         <div>
+            <h2>Portfolio</h2>
+        </div>
+        <hr>
+    </section>
+    <div class="push"></div>
     </div>
-    <nav>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div>
-        <h1>Portfolio</h1>
-    </div>
+    <footer>       
+        <p class="copyright">
+            Copyright©
+        </p>        
+    </footer>
+</body>
+</html>
