Used relative and absolute position to center main content

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="wrapper">
-    <div class="header">
+    <header>
         <div class="nav">
             <h1>Kylan Childers</h1>
                 <ul>
@@ -16,7 +16,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
         </div>
-    </div>
+    </header>
 <section class="contact-form">
     <div>
         <h2>Contact</h2>
