--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,36 @@
             <h2>Portfolio</h2>
         </div>
         <hr>
+        <div class="container">
+            <img src="assets/images/placeholder1.jpeg" alt="Hangman" style="width:200px;">
+            <div class="text-block">
+                <h4>Hangman</h4>
+            </div>
+        </div>
+        <div class="container">
+            <img src="assets/images/placeholder2.jpeg" alt="RPG Game" style="width:200px;">
+            <div class="text-block">
+                <h4>RPG Game</h4>
+            </div>
+        </div>
+        <div class="container">
+            <img src="assets/images/placeholder3.jpeg" alt="Trivia Game" style="width:200px;">
+            <div class="text-block">
+                <h4>Trivia Game</h4>
+            </div>
+        </div>
+        <div class="container">
+            <img src="assets/images/placeholder4.jpeg" alt="Rutgers Info Widget" style="width:200px;">
+            <div class="text-block">
+                <h4>Rutgers Info Widget</h4>
+            </div>
+        </div>
+        <div class="container">
+            <img src="assets/images/download4.jpeg" alt="Rock Paper Scissors" style="width:200px;">
+            <div class="text-block">
+                <h4>Rock Paper Scissors</h4>
+            </div>
+        </div>
     </section>
     <div class="push"></div>
     </div>
