--- a/portfolio.html
+++ b/portfolio.html
@@ -22,36 +22,54 @@
             <h2>Portfolio</h2>
         </div>
         <hr>
+        <table>
+        <tr>
+        <th>
         <div class="container">
             <img src="assets/images/placeholder1.jpeg" alt="Hangman" style="width:200px;">
             <div class="text-block">
                 <h4>Hangman</h4>
             </div>
         </div>
+        </th>
+        <th>
         <div class="container">
             <img src="assets/images/placeholder2.jpeg" alt="RPG Game" style="width:200px;">
             <div class="text-block">
                 <h4>RPG Game</h4>
             </div>
         </div>
+        </th>
+        </tr>
+        <tr>
+        <th>
         <div class="container">
             <img src="assets/images/placeholder3.jpeg" alt="Trivia Game" style="width:200px;">
             <div class="text-block">
                 <h4>Trivia Game</h4>
             </div>
         </div>
+        </th>
+        <th>
         <div class="container">
             <img src="assets/images/placeholder4.jpeg" alt="Rutgers Info Widget" style="width:200px;">
             <div class="text-block">
                 <h4>Rutgers Info Widget</h4>
             </div>
         </div>
+        </th>
+        </tr>
+        <tr>
+        <th>
         <div class="container">
             <img src="assets/images/download4.jpeg" alt="Rock Paper Scissors" style="width:200px;">
             <div class="text-block">
                 <h4>Rock Paper Scissors</h4>
             </div>
         </div>
+        </th>
+        </tr>
+        </table>
     </section>
     <div class="push"></div>
     </div>
