fixed contact spacing and changed color of placeholders

--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
     </div>
     <hr>
     <form>
-        Name<br><input class="contactInfo" type="text" name="Name" value="John Smith"><br>
-        Email<br><input class="contactInfo" type="email" name="Email" value="example@gmail.com"><br>
+        Name<br><input class="contactInfo" type="text" name="Name" placeholder="John Smith"><br>
+        Email<br><input class="contactInfo" type="email" name="Email" placeholder="example@gmail.com"><br>
         Message<br><textarea class="contactInfo" type="message" rows="10" columns="30" name="Message"></textarea><br>
-        <input type="submit" value="Submit">
+        <input class="button" type="submit" value="Submit">
     </form>
 </section>
     <div class="push"></div>
