--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Kylan Childers</title>
+    <!-- Linking CSS reset below -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!-- Linking CSS below -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
