Fixed spelling error in bio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <br>
             <p>
-                I currently live off the southwestern shore of Lake Whatcom with my girlfriend, Zahra, and our two dogs, Loki and Simon, and our Cat, Woody. I enjoy camping, hiking, and snowboarding with the occasional game of golf. Musicwise, I'm generally a rock and metal guy, and I play guitar. I'm a die hard Seahawks fan. I'm also a huge movie buff and have seen probably thousands of movies. I'll also be able to quote any of them to you.
+                I currently live off the southwestern shore of Lake Whatcom with my girlfriend, Zahra, and our two dogs, Loki and Simon, and our cat, Woody. I enjoy camping, hiking, and snowboarding with the occasional game of golf. Musicwise, I'm generally a rock and metal guy, and I play guitar. I'm a die hard Seahawks fan. I'm also a huge movie buff and have seen probably thousands of movies. I'll also be able to quote any of them to you.
             </p>
         </div>
     </section>
